# edi-997-auto-validator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  report.md  report_rejected.md  requirements.txt  sample_accepted.997  sample_rejected.997
cli/: __init__.py  main.py
config/: error_codes.yaml  logging_config.json  validation_rules.yaml
src/: __init__.py
src/models/: __init__.py  config_schemas.py  reconciliation.py  segments.py  validation.py
src/parser/: __init__.py  delimiter_detector.py  element_parser.py  exceptions.py  segment_parser.py  tokenizer.py
src/reconciliation/: __init__.py  reconciler.py
src/reporting/: __init__.py  markdown_generator.py
src/serialization/: __init__.py  json_serializer.py
src/utils/: __init__.py  config_loader.py  error_code_mapper.py  logger.py  profiler.py  validation_pipeline.py
src/validation/: __init__.py  validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_997_files.py  sample_segments.py
tests/unit/: __init__.py  test_cli.py  test_config_loader.py  test_delimiter_detector.py  test_element_parser.py  test_error_code_mapper.py  test_json_serializer.py  test_logger.py  test_markdown_generator.py  test_profiler.py  test_reconciler.py  test_reconciliation_models.py  test_segment_parser.py  test_segments.py  test_tokenizer.py  test_validation_models.py  test_validator.py
ui/: __init__.py  streamlit_app.py
